--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -12,76 +12,108 @@
     <title>
         <%= username %>
     </title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        .profile-container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            border-radius: 10px;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .profile-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .profile-header h1 {
-            font-size: 24px;
-            color: #333;
-        }
-
-        .logout-btn {
-            padding: 10px 20px;
-            background-color: #f9bf3b;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .profile-info h2 {
-            font-size: 20px;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        .profile-info p {
-            color: #777;
-            margin: 5px 0;
-        }
-    </style>
+    <style></style>
 </head>
 
 <body>
+    <div class="Desktop1"
+        style="width: 1440px; height: 900px; position: relative; background: #272727; border: 1px black solid">
+        <div class="Rectangle1"
+            style="width: 1091px; height: 754px; left: 222.40px; top: 71px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="Rectangle4"
+            style="width: 508px; height: 707px; left: 781px; top: 97px; position: absolute; background: #737373; border-radius: 15px">
+        </div>
+        <div class="Rectangle6"
+            style="width: 508px; height: 404px; left: 245px; top: 400px; position: absolute; background: #737373; border-top-left-radius: 15px; border-top-right-radius: 15px">
+        </div>
+        <div class="Rectangle5"
+            style="width: 508px; height: 293px; left: 245px; top: 97px; position: absolute; background: #737373; border-top-left-radius: 15px; border-top-right-radius: 15px">
+        </div>
+        <div class="Ellipse1" style="width: 198.30px; height: 95px; left: 465px; top: 419.50px; position: absolute">
+        </div>
+        <div class="Ellipse3"
+            style="width: 268px; height: 248px; left: 369px; top: 266px; position: absolute; background: #D9D9D9; border-radius: 9999px">
+        </div>
+        <div class="UserName"
+            style="width: 232px; height: 47px; left: 431px; top: 514px; position: absolute; color: white; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            user name</div>
+        <div class="Name"
+            style="width: 222px; height: 26px; left: 454px; top: 561px; position: absolute; color: white; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            NAME</div>
+        <div class="UserGmailCom"
+            style="width: 302px; height: 44px; left: 387px; top: 602px; position: absolute; color: white; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            user@gmail.com</div>
+        <div class="Rectangle9"
+            style="width: 431px; height: 122px; left: 289px; top: 656px; position: absolute; background: #D9D9D9; border-radius: 23px">
+        </div>
+        <div class="Descripition"
+            style="left: 411px; top: 697px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            descripition</div>
+        <div class="Rectangle10"
+            style="width: 170px; height: 52px; left: 950px; top: 129px; position: absolute; background: white; border-radius: 15px">
+        </div>
+        <div class="Rectangle19"
+            style="width: 170px; height: 52px; left: 950px; top: 710px; position: absolute; background: white; border-radius: 15px">
+        </div>
+        <div class="Savee"
+            style="left: 1000px; top: 721px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            savee</div>
+        <div class="Editzz"
+            style="left: 1000px; top: 141px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            editzz</div>
+        <div class="Rectangle11"
+            style="width: 342px; height: 56px; left: 864px; top: 238px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="Rectangle12"
+            style="width: 342px; height: 56px; left: 864px; top: 344px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="Rectangle13"
+            style="width: 342px; height: 56px; left: 864px; top: 450px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="Rectangle14"
+            style="width: 342px; height: 120px; left: 864px; top: 561px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="UserName"
+            style="left: 888px; top: 252px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            user_name</div>
+        <div class="ResetPassword"
+            style="left: 889px; top: 466px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            reset_password</div>
+        <div class="Description"
+            style="left: 888px; top: 569px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            description</div>
+        <div class="Name"
+            style="left: 888px; top: 357px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            name</div>
+        <div class="Rectangle15"
+            style="width: 166px; height: 52px; left: 23px; top: 71px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="FriendList"
+            style="left: 51px; top: 83px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            friend_list</div>
+        <div class="Rectangle16"
+            style="width: 166px; height: 52px; left: 23px; top: 164px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="Rectangle17"
+            style="width: 166px; height: 52px; left: 23px; top: 266px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="DeleteAC"
+            style="left: 43px; top: 281px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            Delete_A/C</div>
+        <div class="Rectangle18"
+            style="width: 166px; height: 52px; left: 23px; top: 368px; position: absolute; background: #D9D9D9; border-radius: 15px">
+        </div>
+        <div class="BackToChat"
+            style="left: 31px; top: 381px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            Back_to_chat</div>
+        <div class="Logout"
+            style="left: 66px; top: 175px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">
+            Logout</div>
+    </div>
+    <button onclick="logout()">logout</button>
 </body>
-<header class="header-overlay header-logged">
-    <div class="novastar">
-        <a href="/" class="logo"><img src="/assets/favicon/favicon-32x32.png"></a>
-    </div>
-</header>
-<div class="profile-container">
-    <div class="profile-header">
-        <h1>User Profile</h1>
-        <button class="logout-btn" onclick="logout()">Logout</button>
-        <button class="delete-btn" onclick="deleteAccount()">Delete account</button>
-    </div>
-    <div class="profile-info">
-        <h2>
-            <%= username %>
-        </h2>
-    </div>
-</div>
+
 <script>
     function logout() {
         fetch('/logout', {
