--- a/views/user.ejs
+++ b/views/user.ejs
@@ -93,7 +93,7 @@
     </style>
 </head>
 
-<body class="Desktop1" style="width: 1440px; height: 2455px; position: relative; background: #181A23">
+<body>
     <button onclick="profile()">profile</button>
     <div id="adfriend">
         <label style="color: #ccc;">Add friend</label>
